fix: 특정챌린지 조회에 참가자수 추가
